--- a/securecoding/build.gradle
+++ b/securecoding/build.gradle
@@ -27,6 +27,9 @@ dependencies {
 	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	// https://mvnrepository.com/artifact/org.mindrot/jbcrypt
+	implementation group: 'org.mindrot', name: 'jbcrypt', version: '0.4'
+
 
 	implementation group: 'org.javassit', name: 'javassist', version: '3.15.0-GA'
 }
